# Python-Threat-Intel-Enrichment-Automation

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  scoring.yaml
data/: alerts.csv  assets.csv  sightings.csv
src/soc_automation/: casegen.py  cli.py  logging_setup.py  models.py  normalize.py  pipeline.py  scoring.py
src/soc_automation/intel/: __init__.py  base.py  mock.py  otx.py  retry.py  vt.py
src/soc_automation/storage/: __init__.py  cache_sqlite.py
tests/: test_normalize.py  test_scoring.py
